<resources>
    <string name="app_name">NasaApp</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>


    <string name="next">Next</string>
    <string name="continue_word">Continue</string>
    <string name="previous">Previous</string>

    <string name="search_hint">e.g. Moon</string>

    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_to_favorites">Remove to favorites</string>

    <string name="images_not_found">No images founded</string>
    <string name="no_favorite_images_founded">No favorite images founded</string>

    <string name="date_placeholder">24.09.2009</string>
    <string name="image_created">Image created:</string>

    <string name="image_was_removed">Image was removed</string>
    <string name="undo">Undo</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>

    <string name="name_error">Incorrect name</string>
    <string name="email_error">Incorrect email</string>
    <string name="phone_error">Phone error</string>
    <string name="password_error">Password length 4–20. At least one digit 0..9. At least one letter a-z. At least one letter A-Z</string>

    <string name="sign_in_to_nasa_app">Sign in to Nasa App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="confirm_number">Confirm Number</string>
    <string name="confirm_code">Confirm code…</string>
    <string name="sending_code">Sending a code to your phone number…</string>
    <string name="we_sent_code_to">We sent an SMS code to</string>
    <string name="invalid_code">Invalid code…</string>
    <string name="unknown_error">Unknown error. Please try again later.</string>
    <string name="in_process">In process</string>
    <string name="success_confirmation">Success confirmation</string>
    <string name="already_sent">Already sent</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="close">Close</string>
    <string name="resend_error">Resend error</string>
    <string name="try_later">Try later</string>

    <string name="report_email">dev.reports@nasa.app</string>
    <string name="report_subject">Problem with verification code</string>
    <string name="my_phone_number">My phone number</string>
    <string name="unable_to_get_verification_code">Unable to get NasaApp verification code</string>
    <string name="device">Device</string>
    <string name="os_version">OS Version</string>
    <string name="proxy">Proxy</string>

    <string name="no_email_apps_found">No email applications found</string>

    <string name="sun_text">Welcome to this incredible app!</string>
    <string name="earth_text">And also add any picture to favorites</string>
    <string name="saturn_text">Here you can search for any pictures related to space</string>

    <string name="detail_placeholder">As scientists developed better instruments, they continued to learn more about the structure and composition of the rings. Saturn actually has many rings made of billions of particles of ice and rock, ranging in size from a grain of sugar to the size of a house. The particles are believed to be debris left over from comets, asteroids or shattered moons. A 2016 study also suggested the rings may be the carcasses of dwarf planets.

The largest ring spans 7,000 times the diameter of the planet. The main rings are typically only about 30 feet (9 meters) thick, but the Cassini-Huygens spacecraft revealed vertical formations in some of the rings, with particles piling up in bumps and ridges more than 2 miles (3 km) high.

The rings are named alphabetically in the order they were discovered. The main rings, working out from the planet, are known as C, B and A. The innermost is the extremely faint D ring, while the outermost to date, revealed in 2009, is so big that it could fit a billion Earths within it. The Cassini Division, a gap some 2,920 miles (4,700 km) wide, separates rings B and A.</string>
    <string name="select_email_app">Select email app</string>
    <string name="try_again">Invalid code. Try again</string>
</resources>