<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.login.LoginFragment">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:src="@drawable/galaxy" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/noto_sans_semi_bold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/sign_in_to_nasa_app"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/Widget.NasaApp.OutlinedInput"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_marginBottom="6dp"
        app:startIconDrawable="@drawable/ic_email_item">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:fontFamily="@font/noto_sans_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.NasaApp.OutlinedInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginBottom="6dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password_item">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:fontFamily="@font/noto_sans_regular"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginBottom="4dp">

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="@dimen/edit_text_height"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/sign_in"
            app:cornerRadius="16dp" />

    </FrameLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/sign_up"
        app:backgroundTint="@color/green"
        app:cornerRadius="16dp" />


</LinearLayout>