<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/alien" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            style="@style/Widget.NasaApp.OutlinedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/ic_name_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                style="@style/Widget.NasaApp.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/Widget.NasaApp.OutlinedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/ic_email_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                style="@style/Widget.NasaApp.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/code_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingTop="8dp"
                app:ccp_defaultNameCode="RU" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input"
                style="@style/Widget.NasaApp.OutlinedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:orientation="horizontal"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    style="@style/Widget.NasaApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Widget.NasaApp.OutlinedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/ic_password_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                style="@style/Widget.NasaApp.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/noto_sans_medium"
                android:padding="10dp"
                android:text="@string/continue_word"
                app:cornerRadius="16dp" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>